# random-enclave

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
common/: Cargo.toml
common/src/: benchmark.rs  lib.rs
enclave/: Cargo.toml
enclave-output/: attestation-1.json  signed-shares-1.cbor
enclave-output/buggy/: attestation-0.json  encrypted-shares-0.cbor  encrypted-shares-0.json  signed-shares-0.cbor
enclave-output/debug-mode/: attestation-0.json
enclave/src/: attest.rs  configure.rs  error.rs  lib.rs  main.rs  nsm_helper.rs  rng.rs  scheme.rs  sharing.rs
enclave/src/scheme/: tests.rs
enclave/src/sharing/: arithmetic.rs  binary.rs
host/: Cargo.toml
host/src/: decrypt.rs  error.rs  interface.rs  lib.rs  main.rs  parse.rs  verify.rs  verify_scheme.rs
host/src/verify_scheme/: io.rs  tests.rs
host/src/verify_scheme/test_outputs/: attestation-0.json  encrypted-shares-0.cbor  encrypted-shares-0.json  encrypted-shares-1.cbor  encrypted-shares-1.json  signed-shares-0.cbor
host/src/verify_scheme/test_outputs/debug_mode/: encrypted-shares-0.cbor  encrypted-shares-0.json  signed-shares-0.cbor
