[package]
name = "enclave"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = "0.4.3"
rand = "0.10.2"
pontifex = { workspace = true, features = ["server", "nsm"] }
tokio = { workspace = true }
common = { path = "../common" }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
ecies = { version = "0.2.11", default-features = false, features = ["std", "x25519", "aes-rust"] }
