[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
pontifex = { workspace = true, features = ["client", "nsm"] }
tokio = { workspace = true }
common = { path = "../common" }

aws-nitro-enclaves-cose = "0.5.2"
openssl = "0.10.81"
libc = "0.2.186"
rand = "0.10.2"
ed25519-dalek = { workspace = true }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
clap = { version = "4.6.2", features = ["derive"] }
hex = "0.4.3"
ecies = { version = "0.2.11", default-features = false, features = ["std", "x25519", "aes-rust"] }
serde_json = "1.0.150"
